fixed spacing on credential logos

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -162,6 +162,8 @@
 }
 
 .credential {
+  min-height: 40vh;
+  padding-left: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
